--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi portafolio</title>
-    <link rel="icon" href="/mi-portafolio/Logos/photo desktop.png">
+    <link rel="icon" href="/mi-portafolio/Logos/Academlo logo.png">
 
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -13,7 +13,7 @@
     <header class="header">
         <div class="header-content">
             <nav class="navbar">
-                <img  src="iconos/menu.svg" alt="icon-menu">
+                <img  src="/mi-portafolio/iconos/menu.svg" alt="icon-menu">
 
             </nav>
     
@@ -48,7 +48,7 @@
                 </section>
                 <section class="img-container">
                     <div>
-                     <img id="perfil-photo" src="logos/photo desktop.png" alt="photo-mobile">
+                     <img id="perfil-photo" src="/mi-portafolio/Logos/photo desktop.png" alt="photo-mobile">
                     </div>
                 </section>
             </section>
@@ -255,8 +255,6 @@
         <div class="portafolio-conteiner">
             <section class="portafolio-img">
                 <div>
-                    <!--<img id="img01" src="/Portafolio 2/Vectores/Rectangle 33-1.svg" alt="cuadrado">-->
-                
                     <img src="/mi-portafolio/Logos/image 9-1.jpg" alt="">
                 </div>
             </section>
