--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Mi portafolio</title>
     <link rel="icon" href="/mi-portafolio/Logos/Academlo logo.png">
 
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="/mi-portafolio/assets/css/style.css">
 </head>
 <body>
     <header class="header">
@@ -16,7 +16,6 @@
                 <img  src="/mi-portafolio/iconos/menu.svg" alt="icon-menu">
 
             </nav>
-    
             <section class="header-information">
                 <div>
                     <img id="Rectangle" src="/mi-portafolio/Vectores/Rectangle 34-1.svg" alt="">
@@ -95,7 +94,6 @@
                         </p>
                     </div>
                 </section>
-
             </div>
         </div>
         <div>
@@ -204,9 +202,7 @@
                             90%
                         </h3>
                     </div>
-
                 </section>
-                
                 <section class="palabras">
                     <div>
                         <p>
